--- a/app/index.css
+++ b/app/index.css
@@ -1,53 +1,98 @@
 body {
-	font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,
-	Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
 }
 
 .container {
-	max-width: 1200px;
-	margin: 0 auto;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+a {
+  text-decoration: none;
+  color: #d0021b;
 }
 
 ul {
-	padding: 0;
+  padding: 0;
 }
 
-li{
-	list-style-type: none;
+li {
+  list-style-type: none;
 }
 
-.languages{
-	display: flex;
-	justify-content: center;
+.button {
+  color: #e6e6e6;
+  background: #0a0a0a;
+  border: none;
+  font-size: 16px;
+  border-radius: 3px;
+  width: 200px;
+  text-align: center;
+  display: block;
+  padding: 7px 0;
+  margin: 10px auto;
 }
 
-.languages li {
-	margin: 10px;
-	font-weight: bold;
-	cursor: pointer;
+.button:hover:enabled {
+  background: linear-gradient(#1a1a1a,#0a0a0a);
+  color: #fff;
+  text-decoration: none;
 }
 
-.popular-list {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-}
-
-.popular-item {
-	margin: 20px;
-	text-align: center;
-}
-
-.popular-rank {
-	font-size: 20px;
-	margin: 10px;
-}
-
-.space-list-items {
-	margin-bottom: 7px;
+.button:active {
+  transform: translateY(1px);
 }
 
 .avatar {
-	width: 150px;
-	border-radius: 50%;
+  width: 150px;
+  border-radius: 50%;
+}
+
+.space-list-items {
+  margin-bottom: 7px;
+}
+
+.languages {
+  display: flex;
+  justify-content: center;
+}
+
+.languages li {
+  margin: 10px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.popular-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.popular-item {
+  margin: 20px;
+  text-align: center;
+}
+
+.popular-rank {
+  font-size: 20px;
+  margin: 10px;
+}
+
+.home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.nav {
+  display: flex;
+}
+
+.nav li {
+  margin-right: 15px;
+}
+
+.active {
+  font-weight: bold;
 }
